@@ -42,6 +42,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   the presence of large numbers of blocks; added indexes and implemented an 
   indexed pager.
 * (bug 6448) Allow filtering of Special:Newpages according to username
+* (bug 6618) Improve permissions/error detection in Special:Lockdb
 
 == Languages updated ==
 
